<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#A486D8"
    android:orientation="vertical"
    tools:context=".meeting_list.AddMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#DED3F1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/topic_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                app:srcCompat="@drawable/topic_foreground" />

            <EditText
                android:id="@+id/topic"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/topicName"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#090909"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/date_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                app:srcCompat="@drawable/date_foreground" />

            <TextView
                android:id="@+id/date_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#090909"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/time_foreground" />

            <TextView
                android:id="@+id/beginning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Start time"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

        </LinearLayout>


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#090909"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/time2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/time_foreground" />

            <TextView
                android:id="@+id/ending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="End time"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center|center_vertical"
                android:textAlignment="viewEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#090909"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/local"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                app:srcCompat="@drawable/local_foreground" />

            <Spinner
                android:id="@+id/spinnerMeetingRooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/roomtypelist"
                android:prompt="@string/MeetingRooms"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="4"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#090909"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/guest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                app:srcCompat="@drawable/guest_foreground" />

            <EditText
                android:id="@+id/participants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:hint="@string/AddParticipants"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:onClick="addMeeting"
            android:text="@string/saveMeeting" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>