<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/item_alert"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:src="@android:drawable/alert_dark_frame" />

        <TextView
            android:id="@+id/item_main"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toStartOf="@+id/item_list_delete_button"
            android:layout_toEndOf="@+id/item_alert"
            android:ellipsize="start"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="Réunion AAAAAAAAAAAAAAAAAAAAAAAAAAAAA - 14h00 - Peach" />

        <ImageButton
            android:id="@+id/item_list_delete_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/delete_button2" />

        <TextView
            android:id="@+id/item_list_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_main"
            android:layout_toStartOf="@+id/item_list_delete_button"
            android:layout_toEndOf="@+id/item_alert"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="toto, toto2" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>