<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6D4D8"
    android:orientation="vertical"
    tools:context=".meeting_list.ListMeetingActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="6dp"
        android:onClick="addMeeting"
        app:backgroundTint="#E91E63"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp" />

</FrameLayout>