<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ludovic.mareiu.meeting_list.ListMeetingActivity">


    <item
        android:id="@+id/Filter"
        android:title="Filter by Room or Day"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView">
    </item>

</menu>
